--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
-*{
+* {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
-html, body { height: 100%; }
-body { margin: 0; 
-    font-family: Roboto,
-     "Helvetica Neue", sans-serif;
-     background-color: rgb(19, 93, 107);
-    }
+
+html, body { 
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: rgb(19, 93, 107);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading {
+    color: #E8F1F2;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 3.5rem;
+    text-align: center;
+    text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
+    padding: 20px;
+    letter-spacing: 2px;
+    background: linear-gradient(45deg, #66FCF1, #45A29E);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: 100%;
+    /* margin-bottom: 20px; */
+}
+
+
+
+button.mat-raised-button {
+    margin: 0 8px;
+    min-width: 120px;
+}
