--- a/src/app/components/rectangle/rectangle.component.css
+++ b/src/app/components/rectangle/rectangle.component.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
-  /* gap: 0.5px; */
+  gap: 0.5px;
   padding: 8px;
   background: #8cd7cf;
   border-radius: 4px;
@@ -32,5 +32,5 @@
 
 .row {
   display: flex;
-  /* gap: 0.5px; */
+  gap: 0.5px;
 }
