--- a/src/app/components/rectangle/rectangle.component.css
+++ b/src/app/components/rectangle/rectangle.component.css
@@ -1,6 +1,6 @@
 .rectangle {
-  width: 10px;
-  height: 10px;
+  width: 15px;
+  height: 15px;
   border: 1px solid rgba(204, 204, 204, 0.3);
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(255, 255, 255, 0.8);
@@ -10,11 +10,13 @@
 .rectangle:hover {
   transform: scale(1.3);
   z-index: 2;
+  box-shadow: 0 0 8px rgba(102, 252, 241, 0.8);
 }
 
 .rectangle.alive {
   background-color: #2196f3;
   box-shadow: 0 0 4px rgba(33, 150, 243, 0.4);
+  
 }
 
 .grid {
@@ -32,5 +34,5 @@
 
 .row {
   display: flex;
-  gap: 0.5px;
+  gap: 1.5px;
 }
